2010-03-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Rubber-stamped by Kenneth Rohde Christiansen.

        Misc documentation fixes. Fixes (almost) all warnings emitted by
        the documentation build process. Only the broken references to JSC
        objects remain.

        * webkit/webkitsecurityorigin.cpp:
        * webkit/webkitwebbackforwardlist.cpp:
        * webkit/webkitwebdatasource.cpp:
        * webkit/webkitwebframe.cpp:
        * webkit/webkitwebhistoryitem.cpp:
        * webkit/webkitwebinspector.cpp:
        (webkit_web_inspector_class_init):
        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        * webkit/webkitwebview.cpp:
        (DNDContentsRequest::webkit_web_view_class_init):

2010-03-11  Anders Carlsson  <andersca@apple.com>

        Reviewed by David Hyatt.

        Remove invalidateContents, it isn't used and it never makes sense to only invalidate the contents.

        * WebCoreSupport/ChromeClientGtk.cpp:
        * WebCoreSupport/ChromeClientGtk.h:

2010-03-09  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] testkeyevents doesn't stop if input event injection fails
        https://bugs.webkit.org/show_bug.cgi?id=35922

        * tests/testkeyevents.c:
        (load_status_cb): Added a safeguard to exit from the test if the
        input event injection failed.

2010-03-09  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed. Documentation control files update for 1.1.23.

        * docs/webkitgtk-docs.sgml:

2010-03-08  Csaba Osztrogonác  <ossy@webkit.org>

        [GTK] Unreviewed buildfix after r55688.

        * webkit/webkitdownload.cpp:
        (webkit_download_start):

2010-03-02  Adam Treat  <atreat@rim.com>

        Reviewed by Dave Hyatt.

        Adapt the gtk port to the refactoring of repaint methods.

        https://bugs.webkit.org/show_bug.cgi?id=34214
