@@ -1,3 +1,13 @@
+2010-03-09  Philippe Normand  <pnormand@igalia.com>
+
+        Reviewed by Holger Freyther.
+
+        [GTK] GTK_WIDGET_IS_SENSITIVE is deprecated in GTK+ 2.20
+        https://bugs.webkit.org/show_bug.cgi?id=35909
+
+        * webkit/webkitwebview.cpp: GTK_WIDGET_IS_SENSITIVE has been
+        deprecated in gtk 2.20. Use gtk_widget_is_sensitive when available.
+
 2010-03-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
 
         Rubber-stamped by Kenneth Rohde Christiansen.
